# parma

./: .gitignore  .rubocop.yml  ARMA_INTEGRATION.md  Dockerfile  Dockerfile.cross  Dockerfile.simple  GAME_DEVELOPMENT_GUIDE.md  IMPROVEMENTS.md  README.md  README_PYTHON.md  ROADMAP.md  Rakefile  SQF_SYNTAX_REFERENCE.md  build-docker.sh  demo.py  demo.rb  demo.rb.sqf  demo.sqf  game_framework.sqf  import_test.py  import_test.sqf  performance_test.py  performance_test.sqf  pyproject.toml  pytest.ini  rarma.gemspec  simple_mission_fixed.py  sqf_command_db.py  sqf_validator.py  test.rb  test_advanced_features.py  test_advanced_features.sqf  test_improvements.py  test_improvements.sqf  test_mission.rb  test_mission.rb.sqf  test_mission.sqf  test_python.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
dll/: CMakeLists.txt  ParmaExtension.cpp  README.md  Toolchain-mingw32.cmake  Toolchain-mingw64.cmake  build.sh
docker/: Dockerfile.cross  Dockerfile.full
docs/: CONTRIBUTING.md  GAME_DEVELOPMENT_GUIDE.md  PARMA_TECHNICAL_REFERENCE.md
examples/: 01_basic_mission.py  01_basic_mission.sqf  02_ai_spawn_system.py  02_ai_spawn_system.sqf  03_vehicle_management.py  03_vehicle_management.sqf  04_dialogue_system.py  04_dialogue_system.sqf  05_weather_time_system.py  05_weather_time_system.sqf  06_multiplayer_coordination.py  06_multiplayer_coordination.sqf  07_event_triggers.py  07_event_triggers.sqf  08_inventory_management.py  08_inventory_management.sqf  09_scoring_statistics.py  09_scoring_statistics.sqf  10_state_machine_logic.py  10_state_machine_logic.sqf  README.md  demo.py  demo.sqf  game_framework.py  open_world_game.py  open_world_game.sqf  simple_mission.py  simple_mission.sqf  simple_mission_fixed.sqf  validate_examples.py  validation_report.json
lib/: rarma.rb
lib/rarma/: cli.rb  compiler.rb  version.rb
lib/rarma/cli/subcommand/: compile.rb  generator.rb  new.rb
spec/: rarma_spec.rb
src/parma/: __init__.py  cli.py  transpiler.py
src/parma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/rarma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tasks/: buildenv.rb
tasks/buildenv/: linux.rb  windows.rb
tests/: __init__.py  test_game_development.py  test_transpiler.py
tools/: build-docker.sh  generate_mission.py  sqf_commands.json  sqf_validator.py  test_mission.py  test_python.py
