[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parma"
version = "0.1.0"
description = "Python to SQF transpiler for ArmA development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "click>=8.0.0",
    "colorama>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/lotherk/parma"
Repository = "https://github.com/lotherk/parma"

[project.scripts]
parma = "parma.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["parma*"]

[tool.setuptools.package-dir]
"" = "src"