[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parma"
version = "2.0.0"
description = "Production-ready Python to SQF transpiler for ArmA 3 game development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.0.0",
    "colorama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=22.0.0",
]
test = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/lotherk/parma"
Repository = "https://github.com/lotherk/parma"

[project.scripts]
parma = "parma.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["parma*"]

[tool.setuptools.package-dir]
"" = "src"